<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

        xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:background="@drawable/bggradient"

        >





    <TextView

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:textAppearance="?android:attr/textAppearanceLarge"

            android:text="@string/title"

            android:textSize="35sp"

            android:id="@+id/textView"

            android:layout_alignParentTop="true"

            android:layout_centerHorizontal="true" />



    <ImageView
            android:id="@+id/img"

            android:contentDescription="@string/logo"

            android:layout_width="150dp"

            android:layout_height="200dp"

            android:padding="20dp"

            android:layout_marginLeft="110dp"

            android:layout_marginStart="108dp"

            android:src="@mipmap/logos"/>

    <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="190dp"

            android:textColor="#000000"

            android:id="@+id/textView3"

            android:text="@string/label1"

            android:textSize="20sp"/>



    <EditText

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:inputType="text"

            android:autofillHints="username"

            android:textColor="#686060"

            android:paddingTop="70dp"

            android:textSize="25sp"

            android:id="@+id/editUser"

            android:layout_below="@+id/textView"

            android:layout_marginTop="100dp"

            android:layout_alignParentRight="true"

            android:layout_alignParentEnd="true"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"

            android:hint="@string/label3" tools:ignore="UnusedAttribute"/>


    <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="274dp"

            android:textColor="#000000"

            android:id="@+id/textView4"

            android:text="@string/label2"

            android:textSize="20sp"/>



    <EditText

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:autofillHints="password"

            android:textColor="#686060"

            android:textSize="25sp"

            android:id="@+id/editPass"

            android:inputType="textPassword"

            android:layout_centerVertical="true"

            android:layout_alignParentLeft="true"

            android:layout_alignParentStart="true"

            android:layout_alignRight="@+id/editUser"

            android:layout_alignEnd="@+id/editUser"

            android:hint="@string/label4" tools:ignore="UnusedAttribute"/>



    <Button

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"

            android:textAlignment="center"

            android:padding="5dp"

            android:background="#A1CDF0"

            android:textSize="20sp"

            android:text="@string/bt1"

            android:id="@+id/btnLogin"

            android:layout_below="@+id/editPass"

            android:onClick="login"

            android:layout_alignLeft="@+id/textView"

            android:layout_alignStart="@+id/textView"

            android:layout_alignRight="@+id/textView"

            android:layout_alignEnd="@+id/textView"/>



    <Button

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"

            android:padding="10dp"

            android:textAlignment="center"

            android:textSize="15sp"

            android:background="#A1CDF0"

            android:text="@string/bt2"

            android:id="@+id/btnRegister"

            android:layout_below="@+id/btnLogin"

            android:layout_alignRight="@+id/btnLogin"

            android:layout_alignEnd="@+id/btnLogin"

            android:layout_alignLeft="@+id/btnLogin"

            android:layout_alignStart="@+id/btnLogin" />



</RelativeLayout>